previous-year-body

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Year New Me</title>
     <!-- Work Sans Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
@@ -14,9 +19,53 @@
     <header>
       <div class="header-container">
         <h1>All Thinks Are Possible If You believe</h1>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
         <button>Contact Us</button>
       </div>
     </header>
+    <main>
+      <!-- Previous Year Section-->
+      <section class="previous-year">
+        <div class="previous-year-container">
+          <div class="previous-year-image">
+            <img src="./images/person.png" alt="" />
+          </div>
+          <div class="previous-year-description">
+            <h1>My failures of previous year</h1>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock.
+            </p>
+            <div class="previous-year-tasks">
+              <div class="tasks">
+                <img src="./images/icons/check.png" alt="" />
+                <p>Contrary to popular belief, is not simply.</p>
+              </div>
+              <div class="tasks">
+                <img src="./images/icons/check.png" alt="" />
+                <p>Contrary to popular belief.</p>
+              </div>
+              <div class="tasks">
+                <img src="./images/icons/check.png" alt="" />
+                <p>Contrary to popular , is not simply.</p>
+              </div>
+              <div class="tasks">
+                <img src="./images/icons/check.png" alt="" />
+                <p>Contrary to popular belief, is not simply.</p>
+              </div>
+              <div class="tasks">
+                <img src="./images/icons/check.png" alt="" />
+                <p>Contrary to popular simply.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
