--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- Previous Year Section-->
       <section class="previous-year">
         <div class="previous-year-container">
-          <div class="previous-year-image">
+          <div>
             <img src="./images/person.png" alt="" />
           </div>
           <div class="previous-year-description">
@@ -43,23 +43,23 @@
             </p>
             <div class="previous-year-tasks">
               <div class="tasks">
-                <img src="./images/icons/check.png" alt="" />
+                <div><img src="./images/icons/check.png" alt="" /></div>
                 <p>Contrary to popular belief, is not simply.</p>
               </div>
               <div class="tasks">
-                <img src="./images/icons/check.png" alt="" />
+                <div><img src="./images/icons/check.png" alt="" /></div>
                 <p>Contrary to popular belief.</p>
               </div>
               <div class="tasks">
-                <img src="./images/icons/check.png" alt="" />
+                <div><img src="./images/icons/check.png" alt="" /></div>
                 <p>Contrary to popular , is not simply.</p>
               </div>
               <div class="tasks">
-                <img src="./images/icons/check.png" alt="" />
+                <div><img src="./images/icons/check.png" alt="" /></div>
                 <p>Contrary to popular belief, is not simply.</p>
               </div>
               <div class="tasks">
-                <img src="./images/icons/check.png" alt="" />
+                <div><img src="./images/icons/check.png" alt="" /></div>
                 <p>Contrary to popular simply.</p>
               </div>
             </div>
