--- a/index.html
+++ b/index.html
@@ -66,6 +66,30 @@
           </div>
         </div>
       </section>
+      <section class="my-plans">
+        <div class="my-plans-container">
+          <div class="my-plans-item">
+            <img src="./images/icons/web.png" alt="" />
+            <h2>Web Development</h2>
+            <p>I want to develop</p>
+          </div>
+          <div class="my-plans-item">
+            <img src="./images/icons/js.png" alt="" />
+            <h2>Javascript</h2>
+            <p>I want to learn</p>
+          </div>
+          <div class="my-plans-item">
+            <img src="./images/icons/smoke.png" alt="" />
+            <h2>Smoking Habit</h2>
+            <p>I want to end</p>
+          </div>
+          <div class="my-plans-item">
+            <img src="./images/icons/ecom.png" alt="" />
+            <h2>E-Commerce</h2>
+            <p>I want to start</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
