--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </div>
       </section>
       <section class="my-plans">
+        <h1>My Plans</h1>
         <div class="my-plans-container">
           <div class="my-plans-item">
             <img src="./images/icons/web.png" alt="" />
