--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           the majority have suffered alteration in some form, by injected
           humour, or randomised words
         </p>
-        <button>Contact Us</button>
+        <button class="primary-btn">Contact Us</button>
       </div>
     </header>
     <main>
@@ -89,6 +89,12 @@
             <h2>E-Commerce</h2>
             <p>I want to start</p>
           </div>
+        </div>
+      </section>
+      <section class="banner my-plans">
+        <div class="banner-container">
+          <h1>Always keep a positive mindset</h1>
+          <button class="primary-btn">Call Now</button>
         </div>
       </section>
     </main>
