--- a/index.html
+++ b/index.html
@@ -97,6 +97,31 @@
           <button class="primary-btn">Call Now</button>
         </div>
       </section>
+      <!-- Future Section -->
+      <section class="future">
+        <div class="future-container">
+          <div class="future-description">
+            <h1>Future</h1>
+            <p>
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words
+            </p>
+            <p>Email : mail.touhidcodes@gmail.com</p>
+            <p>Phone: 01234-567890</p>
+            <div class="social">
+              <a href=""> <img src="./images/icons/fb.png" alt="" /> </a>
+              <a href=""> <img src="./images/icons/youtube.png" alt="" /> </a>
+              <a href=""> <img src="./images/icons/twitter.png" alt="" /> </a>
+            </div>
+          </div>
+          <div class="submit-email">
+            <h4>Subscribe</h4>
+            <input type="email" placeholder="Enter Your Email" />
+            <button type="submit" value="submit"></button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
