--- a/index.html
+++ b/index.html
@@ -105,20 +105,26 @@
             <p>
               There are many variations of passages of Lorem Ipsum available,
               but the majority have suffered alteration in some form, by
-              injected humour, or randomised words
+              injected humour, or randomised words.
             </p>
             <p>Email : mail.touhidcodes@gmail.com</p>
             <p>Phone: 01234-567890</p>
-            <div class="social">
-              <a href=""> <img src="./images/icons/fb.png" alt="" /> </a>
-              <a href=""> <img src="./images/icons/youtube.png" alt="" /> </a>
-              <a href=""> <img src="./images/icons/twitter.png" alt="" /> </a>
+            <div>
+              <a href="">
+                <img src="./images/icons/fb.png" alt="" class="social" />
+              </a>
+              <a href="">
+                <img src="./images/icons/youtube.png" alt="" class="social" />
+              </a>
+              <a href="">
+                <img src="./images/icons/twitter.png" alt="" class="social" />
+              </a>
             </div>
           </div>
           <div class="submit-email">
             <h4>Subscribe</h4>
             <input type="email" placeholder="Enter Your Email" />
-            <button type="submit" value="submit"></button>
+            <button type="submit" value="submit" class="secondary-btn">Subscribe</button>
           </div>
         </div>
       </section>
