--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           </div>
         </div>
       </section>
+      <!-- My Plans Section -->
       <section class="my-plans">
         <h1>My Plans</h1>
         <div class="my-plans-container">
@@ -91,6 +92,31 @@
           </div>
         </div>
       </section>
+      <!-- Custom My Goals Section -->
+      <section class="my-goals">
+        <h2>My Goals</h2>
+        <div class="my-goals-container">
+          <div class="my-goals-item goal-item1">
+            <img src="./images/icons/programming.png" alt="" />
+            <h2>Student of Programming Hero</h2>
+            <p>
+              Learning Complete Web Development by Programming Hero online
+              course. Hope successfully complete this course with great
+              achievement and success.
+            </p>
+          </div>
+          <div class="my-goals-item goal-item2">
+            <img src="./images/icons/graduate-hat.png" alt="" />
+            <h2>Focus on Academic Career</h2>
+            <p>
+              As a student of Biochemistry and Molecular Biology, shoud br
+              focused on Academic. Interested in Bioinformatics which is related
+              with programming.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- Banner Section -->
       <section class="banner my-plans">
         <div class="banner-container">
           <h1>Always keep a positive mindset</h1>
@@ -124,7 +150,9 @@
           <div class="submit-email">
             <h4>Subscribe</h4>
             <input type="email" placeholder="Enter Your Email" />
-            <button type="submit" value="submit" class="secondary-btn">Subscribe</button>
+            <button type="submit" value="submit" class="secondary-btn">
+              Subscribe
+            </button>
           </div>
         </div>
       </section>
