--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <img src="./images/icons/graduate-hat.png" alt="" />
             <h2>Focus on Academic Career</h2>
             <p>
-              As a student of Biochemistry and Molecular Biology, shoud br
+              As a student of Biochemistry and Molecular Biology, shoud be
               focused on Academic. Interested in Bioinformatics which is related
               with programming.
             </p>
